# shiboleth-marketing-compliance-analyst

./: .env.example  .gitignore  DEPLOY.md  Makefile  OPERATIONS.md  README.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: 6d48d50cc391_flag_trust_signals.py  94a47fceda41_rules_retrieval_keywords.py  be61a6f8ddf0_initial_schema_full_01_spec_s5_data_.py
apps/api/src/adlign/: __init__.py  config.py  main.py  smoke.py
apps/api/src/adlign/api/: __init__.py  hardening.py
apps/api/src/adlign/db/: models.py  seed.py
apps/api/src/adlign/evals/: __init__.py
apps/api/src/adlign/pipeline/: corpus_run.py  live_run.py
apps/api/src/shiboleth/: __init__.py  config.py  main.py  smoke.py
apps/api/tests/integration/: test_api_disposition.py  test_api_events.py  test_api_hardening.py  test_api_issue_payload.py  test_api_metrics.py  test_api_preview.py  test_api_severity.py  test_api_trust.py  test_checker_synthetics.py  test_run_failure.py  test_scorecard_service.py  test_seed_db.py  test_skip_property.py
apps/api/tests/support/: cassette.py
apps/api/tests/unit/: test_check_ambiguous.py  test_cluster.py  test_config.py  test_corpus_loader.py  test_discovery.py  test_env_propagation.py  test_extract_properties.py  test_hardening.py  test_issues.py  test_kpis.py  test_live_ingest.py  test_metrics_glue.py  test_preview_transform.py  test_scoring.py  test_seed_verbatim.py  test_trust.py  test_windows.py
(+110 files in other folders)
