# meta: uv-managed Python 3.12 package for the Shiboleth FastAPI service.
# Dependency policy: M0 set only; crawl4ai enters at M6 (corpus mode needs no
# crawler); langgraph/langchain 1.x per stack lock (04 §6g).

[project]
name = "shiboleth"
version = "0.1.0"
description = "Shiboleth marketing-compliance monitoring API (MVP1)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "langchain>=1.0",
    "langgraph>=1.0",
    "langsmith>=0.2",
    "langchain-google-genai>=2.0",
    "langchain-groq>=0.2",
    "sse-starlette>=2.1",
    "langchain-anthropic>=1.4.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shiboleth"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 96
target-version = "py312"
